fix: layout breaking for widescreen

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -6,6 +6,7 @@
 @import './partials/content.sass'
   
 .App
+  display: block
   text-align: center
   height: 100vh
   width: 100vw
