--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -4,6 +4,8 @@
   box-sizing: border-box
   
 body
+  height: 100vh
+  width: 100vw
   margin: 0
   padding: 0
   background: rgb(37, 38, 39)
