--- a/src/styles/partials/content.sass
+++ b/src/styles/partials/content.sass
@@ -6,6 +6,9 @@
     height: 100%
     padding: 2%
 
+    p 
+        margin: 0.1em 0
+
     // TABLET
     @media screen and (min-width: $tablet) and (max-width: $desktop - 1) and (min-height: $tablet)
         grid-row: 2
