--- a/src/styles/partials/layout.sass
+++ b/src/styles/partials/layout.sass
@@ -1,6 +1,7 @@
 #layout
     display: grid
-    height: 100%
+    height: 100vh
+    width: 100vw
     grid-template-rows: minmax(60px, 8vh) 1fr minmax(60px, 10vh)
     border: 1px solid red
     
