--- a/src/styles/partials/nav.sass
+++ b/src/styles/partials/nav.sass
@@ -1,8 +1,8 @@
 #nav-container
     display: grid
     grid-row: 3
-    width: 100%
-    height: 100%
+    max-width: 100%
+    max-height: 100%
     background: $colorBlackBg
     border: 1px solid green
 
@@ -59,14 +59,20 @@
 
             #nav
                 display: grid
-                margin: 5em 0 15em 0
-                align-self: start
+                grid-row: 1
+                padding: 4em 0 0
+                align-self: middle
 
                 li 
-                    margin-bottom: 5em
+                    margin: 1em
 
 #social-nav-container
     display: none
+
+    .social-nav
+        list-style: none
+        padding: 0
+        margin: 1em 0
 
     @media screen and (min-width: $desktop) and (max-width: $widescreen - 1)
         &.header
@@ -75,3 +81,5 @@
     @media screen and (min-width: $widescreen) and (min-height: $tabletL)
         &.page
             display: grid
+            grid-row: 2
+            align-self: end
